--- a/src/sass/_settings.scss
+++ b/src/sass/_settings.scss
@@ -40,6 +40,17 @@ ul {
 a {
   text-decoration: none;
 }
+input, textarea, select {
+  -webkit-appearance: none;
+}
+input {
+  all: unset;
+}
+/* input[type="search"]::-webkit-search-decoration,
+input[type="search"]::-webkit-search-cancel-button,
+input[type="search"]::-webkit-search-results-button,
+input[type="search"]::-webkit-search-results-decoration { display: none; } */
+
 
 // fonts
 @font-face {
@@ -77,10 +88,24 @@ $warning-color: #FFD422;
 
 // title
 .title {
+  font-family: "Inter-Bold";
+  color: $base-color;
+  font-size: 16px;
+  font-weight: 700;
+}
+.text {
   font-family: "Inter-Medium";
   color: $base-color;
   font-size: 13px;
   line-height: 16px;
+  font-weight: 500;
+}
+
+section {
+  padding: 50px;
+}
+.inner {
+  padding: 30px 0;
 }
 
 
