--- a/src/sass/_settings.scss
+++ b/src/sass/_settings.scss
@@ -46,6 +46,17 @@ input, textarea, select {
 input {
   all: unset;
 }
+
+textarea {
+  border: none;
+  overflow: auto;
+  outline: none;
+  -webkit-box-shadow: none;
+  -moz-box-shadow: none;
+  box-shadow: none;
+  font-family: inherit;
+  font-size: inherit;
+}
 /* input[type="search"]::-webkit-search-decoration,
 input[type="search"]::-webkit-search-cancel-button,
 input[type="search"]::-webkit-search-results-button,
