--- a/src/sass/_settings.scss
+++ b/src/sass/_settings.scss
@@ -96,6 +96,7 @@ $accent-color: #18A0FB;
 $error-color: #FF3E1D;
 $success-color: #00D200;
 $warning-color: #FFD422;
+$heigh-select: 36px;
 
 // title
 .title {
